deploy/ingressclass-openstack.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: ingress-openstack
spec:
  controller: k8s.io/ingress-nginx
