deploy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openstack
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
