deploy/external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openstack-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: ingress-openstack

  rules:
    - host: keystone.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keystone-api
                port:
                  number: 5000
    - host: horizon.127.0.0.1.nip.io
      http:
        paths:
        - backend:
            service:
              name: horizon-int
              port:
                name: web
          path: /
          pathType: Prefix
    - host: glance.127.0.0.1.nip.io
      http:
        paths:
        - backend:
            service:
              name: glance-api
              port:
                number: 9292
          path: /
          pathType: Prefix
    - host: cinder.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinder-api
                port:
                  number: 8776
    - host: heat.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heat-api
                port:
                  number: 8004
    - host: designate.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heat-api
                port:
                  number: 9001
    - host: placement.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: placement-api
                port:
                  number: 8778
    - host: nova.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nova-api
                port:
                  number: 8774
    - host: neutron.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neutron-api
                port:
                  number: 9696
